# fractal

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  design-principles.md  drift-detection.md  drift-log.md  gates.md  implementation-status.md  planner.md  primitives.md  project-structure.md  runner.md  scratch-v1-implementation-plan.md  state.md  step-templates.md  task-node-schema.md  uncertainty-hitl.md
docs/logging/: PLAN.md  README.md  implementation-status.md  logging.md  project-structure.md  state.md
sessions/: execution_log.jsonl  metadata.json  tree.json
superpowers_runner/: __main__.py
superpowers_runner/client/: llm.py  oauth.py
superpowers_runner/detector/: checks.py  drift.py  uncertainty.py
superpowers_runner/notify/: display.py  notifier.py
superpowers_runner/planner/: classifier.py  decomposer.py  planner.py
superpowers_runner/runner/: context.py  correction.py  gates_runner.py  runner.py
superpowers_runner/schema/: __init__.py  gates.py  nodes.py  primitives.py  (+1 more)
superpowers_runner_v2/: __init__.py  __main__.py  artifacts.py  client.py  gates.py  logger.py  planner.py  runner.py  schema.py  state.py
tests/: test_checks.py  test_cli.py  test_client.py  test_context.py  test_correction.py  test_detectors.py  test_gates_runner.py  test_integration_gaps.py  test_logger.py  test_notify.py  test_planner.py  test_runner.py  test_schema.py  test_session.py  test_templates.py  test_v2_artifacts.py  test_v2_cli.py  test_v2_e2e.py  test_v2_gates.py  test_v2_logger.py  test_v2_planner.py  test_v2_runner.py  test_v2_state.py
(+39 files in other folders)
